--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div id="main">
         <div class="imgcontainer">
-            <img src="image/Login.png" alt="Avatar" class="avatar">
+            <img src="Login.png" alt="Avatar" class="avatar">
         </div>
         <div class="navbar">
             <a href="#home" class="active"><i class="material-icons">account_circle</i><span class="icon-text"></span>&nbsp;&nbsp;&nbsp;&nbsp;Account<span></a>
